# JobGenie

./: .env  .env.example  .gitignore  .replit  README.md  SETUP_GUIDE.md  app.py  config.json  config.py  flexible_job_scraper.py  job_matcher.py  jobgenie_jobs_7days.csv  postgres_database.py  pyproject.toml  requirements.txt  resume_parser.py  utils.py
attached_assets/: api_job_scraper.py  app.py  config.json  config.py  database.py  flexible_job_scraper.py  job_matcher.py  job_scraper.py  jobgenie.db  postgres_database.py  resume_parser.py  utils.py
jobgenie_env/: pyvenv.cfg
